# 3DStylus

./: .gitignore  3DStylus.code-workspace  CMakeLists.txt  README.md
data/ds325/: test.py
include/: ImagePlayer.hpp  ImageProcessing.hpp  MediaStrategy.hpp  StrokeDetector.hpp  VideoPlayer.hpp  dollar.hpp
src/: ImagePlayer.cpp  ImageProcessing.cpp  StrokeDetector.cpp  VideoPlayer.cpp  dollar.cpp  main.cpp
tests/: test.cpp  testDollar.cpp  testDollarOnData.cpp  testImageProcessing.cpp  testStrokeDetector.cpp
